--- a/specification/ai/Azure.AI.Projects/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Projects/tspconfig.yaml
@@ -43,6 +43,7 @@ options:
     emitter-output-dir: "{output-dir}/{service-dir}/azaiprojects"
   "@azure-tools/typespec-csharp":
     namespace: "Azure.AI.Projects"
+    flavor: azure
     clear-output-folder: true
 linter:
   extends:
