--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -24,7 +24,7 @@ options:
     "package-pprint-name": "Key Vault Certificates"
     "package-version": "4.9.0"
     "namespace": "azure.keyvault.certificates._generated"
-    "package-dir": "azure-keyvault-certificates"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-keyvault-certificates"
   "@azure-tools/typespec-java":
     flavor: azure
     emitter-output-dir: "{output-dir}/{service-dir}/azure-security-keyvault-certificates"
