--- a/specification/storagediscovery/Microsoft.StorageDiscovery.Management/tspconfig.yaml
+++ b/specification/storagediscovery/Microsoft.StorageDiscovery.Management/tspconfig.yaml
@@ -18,26 +18,26 @@ options:
     clear-output-folder: true
     namespace: "Azure.ResourceManager.StorageDiscovery"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-storagediscovery"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-storagediscovery"
     namespace: "com.azure.resourcemanager.storagediscovery"
     flavor: "azure"
     service-name: "Storage Discovery"
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    package-dir: "arm-storagediscovery"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-storagediscovery"
     flavor: azure
     package-details:
       name: "@azure/arm-storagediscovery"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-storagediscovery"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-storagediscovery"
     namespace: "azure.mgmt.storagediscovery"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/storagediscovery"
-    package-dir: "armstoragediscovery"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armstoragediscovery"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armstoragediscovery"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
