--- a/specification/containerservice/Fleet.Management/tspconfig.yaml
+++ b/specification/containerservice/Fleet.Management/tspconfig.yaml
@@ -34,7 +34,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/containerservicefleet"
     emitter-output-dir: "{output-dir}/{service-dir}/armcontainerservicefleet"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armcontainerservicefleet"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
