--- a/specification/dns/DNS.Management/tspconfig.yaml
+++ b/specification/dns/DNS.Management/tspconfig.yaml
@@ -12,26 +12,26 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/dns.json"
     examples-dir: "{project-root}/examples"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-dns"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-dns"
     namespace: "azure.mgmt.dns"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-dnslibrary"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-dnslibrary"
     namespace: "com.azure.resourcemanager.dnslibrary"
     service-name: "Dns" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-dns"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-dns"
     flavor: "azure"
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-dns"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/dns"
-    package-dir: "armdns"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armdns"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdns"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
