--- a/specification/elasticsan/resource-manager/Microsoft.ElasticSan/ElasticSan/tspconfig.yaml
+++ b/specification/elasticsan/resource-manager/Microsoft.ElasticSan/ElasticSan/tspconfig.yaml
@@ -18,19 +18,19 @@ options:
     model-namespace: true
     namespace: "Azure.ResourceManager.ElasticSan"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-elasticsan"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-elasticsan"
     namespace: "azure.mgmt.elasticsan"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-elasticsan"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-elasticsan"
     namespace: "com.azure.resourcemanager.elasticsan"
     service-name: "ElasticSan" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
     service-dir: "sdk/elasticsans"
-    package-dir: "arm-elasticsan"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-elasticsan"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -38,8 +38,8 @@ options:
       name: "@azure/arm-elasticsan"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/elasticsan"
-    package-dir: "armelasticsan"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armelasticsan"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armelasticsan"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
