--- a/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
@@ -36,7 +36,7 @@ options:
     model-namespace: false
   "@azure-tools/typespec-java":
     namespace: "com.azure.messaging.eventgrid.namespaces"
-    package-dir: azure-messaging-eventgrid-namespaces
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-messaging-eventgrid-namespaces"
     partial-update: true
     generate-samples: false
     generate-tests: false
@@ -59,6 +59,5 @@ options:
     service-dir: "sdk/messaging/eventgrid"
     emitter-output-dir: "{output-dir}/{service-dir}/aznamespaces"
     module-version: "0.0.1"
-    emitter-output-dir: "{project-root}"
     slice-elements-byval: true
     flavor: "azure"
