--- a/specification/help/Help.Management/tspconfig.yaml
+++ b/specification/help/Help.Management/tspconfig.yaml
@@ -19,19 +19,19 @@ options:
     namespace: "Azure.ResourceManager.Help"
   "@azure-tools/typespec-python":
     service-dir: "sdk/selfhelp"
-    package-dir: "azure-mgmt-selfhelp"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-selfhelp"
     namespace: "azure.mgmt.selfhelp"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
     service-dir: "sdk/selfhelp"
-    package-dir: "azure-resourcemanager-selfhelp"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-selfhelp"
     namespace: "com.azure.resourcemanager.selfhelp"
     service-name: "Self Help" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-selfhelp"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-selfhelp"
     "service-dir": "sdk/selfhelp"
     is-modular-library: true
     flavor: "azure"
@@ -42,8 +42,8 @@ options:
       name: "@azure/arm-selfhelp"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/selfhelp"
-    package-dir: "armselfhelp"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armselfhelp"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armselfhelp"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
