--- a/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
+++ b/specification/hybridkubernetes/HybridKubernetes.Management/tspconfig.yaml
@@ -17,18 +17,18 @@ options:
     model-namespace: true
     namespace: "Azure.ResourceManager.Kubernetes"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-hybridkubernetes"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-hybridkubernetes"
     namespace: "azure.mgmt.hybridkubernetes"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-hybridkubernetes"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-hybridkubernetes"
     namespace: "com.azure.resourcemanager.hybridkubernetes"
     service-name: "Hybridkubernetes" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-hybridkubernetes"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-hybridkubernetes"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -36,8 +36,8 @@ options:
       name: "@azure/arm-hybridkubernetes"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/hybridkubernetes"
-    package-dir: "armhybridkubernetes"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armhybridkubernetes"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armhybridkubernetes"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
