--- a/specification/liftrqumulo/Qumulo.Storage.Management/tspconfig.yaml
+++ b/specification/liftrqumulo/Qumulo.Storage.Management/tspconfig.yaml
@@ -27,14 +27,15 @@ options:
     namespace: "Azure.ResourceManager.Qumulo"
   "@azure-tools/typespec-python":
     package-name: "azure-mgmt-qumulo"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-qumulo"
     namespace: "azure.mgmt.qumulo"
     flavor: "azure"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/liftrqumulo"
-    package-dir: "armqumulo"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armqumulo"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armqumulo"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
@@ -43,7 +44,7 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-qumulo"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-qumulo"
     namespace: "com.azure.resourcemanager.qumulo"
     service-name: "Qumulo"
     flavor: azure
