--- a/specification/maintenance/Maintenance.Management/tspconfig.yaml
+++ b/specification/maintenance/Maintenance.Management/tspconfig.yaml
@@ -12,18 +12,18 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/Maintenance.json"
     examples-dir: "{project-root}/examples"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-maintenance"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-maintenance"
     namespace: "azure.mgmt.maintenance"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-maintenance"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-maintenance"
     namespace: "com.azure.resourcemanager.maintenance"
     service-name: "Maintenance" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-maintenance"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-maintenance"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -31,8 +31,8 @@ options:
       name: "@azure/arm-maintenance"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/maintenance"
-    package-dir: "armmaintenance"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armmaintenance"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armmaintenance"
     fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
