--- a/specification/monitor/Monitor.Ingestion/tspconfig.yaml
+++ b/specification/monitor/Monitor.Ingestion/tspconfig.yaml
@@ -17,13 +17,13 @@ options:
     emitter-output-dir: "{project-root}/.."
     output-file: "{azure-resource-provider-folder}/ingestion/{version-status}/{version}/DataCollectionRules.json"
   "@azure-tools/typespec-python":
-    package-dir: "azure-monitor-ingestion"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-monitoring"
     package-name: "{package-dir}"
     package-mode: dataplane
     flavor: azure
     namespace: azure.monitor.ingestion
   "@azure-tools/typespec-java":
-    package-dir: "azure-monitor-ingestion"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-monitor-ingestion"
     namespace: com.azure.monitor.ingestion
     flavor: azure
     partial-update: true
@@ -32,7 +32,7 @@ options:
     customization-class: "customization/src/main/java/MonitorIngestionCustomizations.java"
   "@azure-tools/typespec-go":
     service-dir: "sdk/monitor/ingestion"
-    package-dir: "azlogs"
+    emitter-output-dir: "{output-dir}/{service-dir}/azlogs"
     module: "github.com/Azure/azure-sdk-for-go/sdk/monitor/ingestion/azlogs"
     module-version: "0.0.1"
     single-client: true
@@ -46,7 +46,7 @@ options:
     model-namespace: false
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
   "@azure-tools/typespec-ts":
-    package-dir: "monitor-ingestion"
+    emitter-output-dir: "{output-dir}/{service-dir}/monitor-ingestion"
     is-modular-library: true
     package-details:
       name: "@azure/monitor-ingestion"
