--- a/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
+++ b/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
@@ -17,8 +17,8 @@ options:
     emitter-output-dir: "{project-root}/.."
     output-file: "{azure-resource-provider-folder}/Microsoft.OperationalInsights/{version-status}/{version}/OperationalInsights.json"
   "@azure-tools/typespec-python":
-    package-dir: "azure-monitor-query"
-    package-name: "{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-monitor-query"
+    package-name: "azure-monitor-query"
     package-mode: dataplane
     package-version: 2.0.0
     flavor: azure
@@ -30,7 +30,7 @@ options:
     model-namespace: false
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "monitor-query-logs"
+    emitter-output-dir: "{output-dir}/{service-dir}/monitor-query-logs"
     is-modular-library: true
     package-details:
       name: "@azure/monitor-query-logs"
@@ -38,7 +38,7 @@ options:
       version: "1.0.0"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "azure-monitor-query-logs"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-monitor-query-logs"
     namespace: com.azure.monitor.query.logs
     flavor: azure
     use-object-for-unknown: true
@@ -51,7 +51,7 @@ options:
     service-name: LogsQuery
   "@azure-tools/typespec-go":
     service-dir: "sdk/monitor/query"
-    package-dir: "azlogs"
+    emitter-output-dir: "{output-dir}/{service-dir}/azlogs"
     module: "github.com/Azure/azure-sdk-for-go/sdk/monitor/query/azlogs"
     module-version: "0.0.1"
     single-client: true
