--- a/specification/notificationhubs/NotificationHubs.Management/tspconfig.yaml
+++ b/specification/notificationhubs/NotificationHubs.Management/tspconfig.yaml
@@ -11,18 +11,18 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/notificationhubs.json"
     examples-dir: "{project-root}/examples"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-notificationhubs"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-notificationhubs"
     namespace: "azure.mgmt.notificationhubs"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-notificationhubs"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-notificationhubs"
     namespace: "com.azure.resourcemanager.notificationhubs"
     service-name: "NotificationHubs" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-notificationhubs"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-notificationhubs"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -30,8 +30,8 @@ options:
       name: "@azure/arm-notificationhubs"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/notificationhubs"
-    package-dir: "armnotificationhubs"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armnotificationhubs"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armnotificationhubs"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
