--- a/specification/postgresqlhsc/PostgresqlHsc.Management/tspconfig.yaml
+++ b/specification/postgresqlhsc/PostgresqlHsc.Management/tspconfig.yaml
@@ -13,27 +13,27 @@ options:
     arm-resource-flattening: true
   "@azure-tools/typespec-python":
     service-dir: "sdk/cosmosdbforpostgresql"
-    package-dir: "azure-mgmt-cosmosdbforpostgresql"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-cosmosdbforpostgresql"
     namespace: "azure.mgmt.cosmosdbforpostgresql"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
     service-dir: "sdk/cosmosdbforpostgresql"
-    package-dir: "azure-resourcemanager-cosmosdbforpostgresql"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-cosmosdbforpostgresql"
     namespace: "com.azure.resourcemanager.cosmosdbforpostgresql"
     service-name: "Cosmos DB for PostgreSql" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-postgresqlhsc"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-postgresqlhsc"
     flavor: azure
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-postgresqlhsc"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/postgresqlhsc"
-    package-dir: "armpostgresqlhsc"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armpostgresqlhsc"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armpostgresqlhsc"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
