--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -12,13 +12,13 @@ options:
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-redis"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-redis"
     namespace: "azure.mgmt.redis"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-redis"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-redis"
     namespace: "com.azure.resourcemanager.redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
@@ -28,15 +28,15 @@ options:
     use-object-for-unknown: true
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-rediscache"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-rediscache"
     flavor: azure
     experimental-extensible-enums: true
     package-details:
       name: "@azure/arm-rediscache"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/redis"
-    package-dir: "armredis"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armredis"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armredis"
     fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
