--- a/specification/support/Support.Management/tspconfig.yaml
+++ b/specification/support/Support.Management/tspconfig.yaml
@@ -18,13 +18,13 @@ options:
     arm-resource-flattening: true
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-support"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-support"
     namespace: "azure.mgmt.support"
     generate-test: true
     generate-sample: true
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-support"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-support"
     typespec-title-map:
       SupportClient: "MicrosoftSupport"
     package-details:
@@ -32,14 +32,14 @@ options:
     flavor: azure
     experimental-extensible-enums: true
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-support"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-support"
     namespace: com.azure.resourcemanager.support
     flavor: azure
     service-name: Support
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/support"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
-    package-dir: "armsupport"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armsupport"
+    emitter-output-dir: "{output-dir}/{service-dir}/armsupport"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
