--- a/specification/webpubsub/SignalRService.Management/tspconfig.yaml
+++ b/specification/webpubsub/SignalRService.Management/tspconfig.yaml
@@ -12,18 +12,18 @@ options:
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-webpubsub"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-webpubsub"
     namespace: "azure.mgmt.webpubsub"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-webpubsub"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-webpubsub"
     namespace: "com.azure.resourcemanager.webpubsub"
     service-name: "WebPubSub" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    package-dir: "arm-webpubsub"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-webpubsub"
     service-dir: "sdk/web-pubsub"
     flavor: azure
     experimental-extensible-enums: true
@@ -31,8 +31,8 @@ options:
       name: "@azure/arm-webpubsub"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/webpubsub"
-    package-dir: "armwebpubsub"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armwebpubsub"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armwebpubsub"
     fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
