--- a/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
@@ -44,6 +44,7 @@ options:
       version: "1.2.0"
     generate-test: true
     generate-sample: true
+    is-modular-library: true
     flavor: "azure"
 linter:
   extends:
