Fix ARM review comments

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ConnectedEnvironmentsDaprComponents.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ConnectedEnvironmentsDaprComponents.json
@@ -170,6 +170,11 @@
           },
           "201": {
             "description": "Created",
+            "headers": {
+              "Azure-AsyncOperation": {
+                "type": "string"
+              }
+            },
             "schema": {
               "$ref": "./CommonDefinitions.json#/definitions/DaprComponent"
             }
