try to fix js validation ci error

--- a/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
+++ b/specification/webpubsub/data-plane/WebPubSub/tspconfig.yaml
@@ -38,6 +38,7 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-ts":
+    service-dir: "sdk/web-pubsub"
     package-dir: "web-pubsub"
     package-details:
       name: "@azure/web-pubsub"
