--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/HttpRouteConfig_CreateOrUpdatePrefix.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/HttpRouteConfig_CreateOrUpdatePrefix.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "examplerg",
     "environmentName": "testcontainerenv",
     "httpRouteName": "httproutefriendlyname",
-    "api-version": "2025-02-02-preview",
+    "api-version": "2025-07-01",
     "httpRouteConfigEnvelope": {
       "properties": {
         "customDomains": [
@@ -25,7 +25,7 @@
             "routes": [
               {
                 "match": {
-                  "pathSeparatedPrefix": "/v1",
+                  "prefix": "/v1",
                   "caseSensitive": true
                 },
                 "action": {
@@ -66,7 +66,7 @@
               "routes": [
                 {
                   "match": {
-                    "pathSeparatedPrefix": "/v1",
+                    "prefix": "/v1",
                     "caseSensitive": true
                   },
                   "action": {
@@ -106,7 +106,7 @@
               "routes": [
                 {
                   "match": {
-                    "pathSeparatedPrefix": "/v1",
+                    "prefix": "/v1",
                     "caseSensitive": true
                   },
                   "action": {
