--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
@@ -1033,7 +1033,7 @@
           "description": "custom domain bindings for Container Apps' hostnames.",
           "type": "array",
           "items": {
-            "$ref": "#/definitions/CustomDomain"
+            "$ref": "./CommonDefinitions.json#/definitions/CustomDomain"
           },
           "x-ms-identifiers": [
             "name"
@@ -1189,35 +1189,6 @@
         },
         "label": {
           "description": "Associates a traffic label with a revision",
-          "type": "string"
-        }
-      }
-    },
-    "CustomDomain": {
-      "description": "Custom Domain of a Container App",
-      "type": "object",
-      "required": [
-        "name"
-      ],
-      "properties": {
-        "name": {
-          "description": "Hostname.",
-          "type": "string"
-        },
-        "bindingType": {
-          "description": "Custom Domain binding type.",
-          "enum": [
-            "Disabled",
-            "SniEnabled"
-          ],
-          "type": "string",
-          "x-ms-enum": {
-            "name": "bindingType",
-            "modelAsString": true
-          }
-        },
-        "certificateId": {
-          "description": "Resource Id of the Certificate to be bound to this hostname. Must exist in the Managed Environment.",
           "type": "string"
         }
       }
