--- a/specification/edge/Microsoft.Edge.DisconnectedOperations.Management/tspconfig.yaml
+++ b/specification/edge/Microsoft.Edge.DisconnectedOperations.Management/tspconfig.yaml
@@ -4,7 +4,7 @@ options:
   "@azure-tools/typespec-ts":
     flavor: azure
     experimental-extensible-enums: true
-    package-dir: arm-disconnectedoperations
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-disconnectedoperations"
     package-details:
       name: "@azure/arm-disconnectedoperations"
   "@azure-tools/typespec-csharp":
