--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_ListByManagedEnvironment.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_ListByManagedEnvironment.json
@@ -63,7 +63,13 @@
                   "targets": [
                     {
                       "containerApp": "containerApp2",
-                      "revision": "containerApp2--0000002"
+                      "revision": "rev-2",
+                      "weight": 50
+                    },
+                    {
+                      "containerApp": "containerApp2",
+                      "revision": "rev-3",
+                      "weight": 50
                     }
                   ],
                   "routes": [
