--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_Get.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_Get.json
@@ -27,7 +27,8 @@
               "targets": [
                 {
                   "containerApp": "capp-1",
-                  "revision": "capp-1--0000001"
+                  "revision": "rev-1",
+                  "weight": 100
                 }
               ],
               "routes": [
