--- a/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_Patch.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2025-02-02-preview/examples/HttpRouteConfig_Patch.json
@@ -19,7 +19,8 @@
             "targets": [
               {
                 "containerApp": "capp-1",
-                "revision": "capp-1--0000001"
+                "revision": "rev-1",
+                "weight": 100
               }
             ],
             "routes": [
@@ -60,7 +61,8 @@
               "targets": [
                 {
                   "containerApp": "capp-1",
-                  "revision": "capp-1--0000001"
+                  "revision": "rev-1",
+                  "weight": 100
                 }
               ],
               "routes": [
