Update client.tsp for .Net SDK generation

--- a/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/tspconfig.yaml
+++ b/specification/mysql/resource-manager/Microsoft.DBforMySQL/FlexibleServers/tspconfig.yaml
@@ -16,9 +16,10 @@ options:
   "@azure-tools/typespec-csharp":
     flavor: azure
     package-dir: "Azure.ResourceManager.MySql"
+    package-name: "{package-dir}"
     clear-output-folder: true
     model-namespace: true
-    namespace: "{package-dir}"
+    namespace: "{package-dir}.FlexibleServers"
   "@azure-tools/typespec-python":
     service-dir: "sdk/mysqlflexibleservers"
     package-dir: "azure-mgmt-mysqlflexibleservers"
