Apply workaround to correct tspconfig.yaml.

--- a/specification/devcenter/DevCenter.Management/tspconfig.yaml
+++ b/specification/devcenter/DevCenter.Management/tspconfig.yaml
@@ -12,6 +12,7 @@ options:
     emit-lro-options: "all"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+    use-read-only-status-schema: true
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-devcenter"
     namespace: "azure.mgmt.devcenter"
